--- a/src/labs/pm/data/config.properties
+++ b/src/labs/pm/data/config.properties
@@ -14,3 +14,12 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 product.data.format={0},{1},{2},{3},{4},{5}
 review.data.format={0},{1},{2}
+
+reports.folder=C:\\Users\\<user-so>\\labs\\reports
+data.folder=C:\\Users\\<user-so>\\labs\\data
+temp.folder=C:\Users\<user-so>\\labs\\temp
+
+report.file=product{0}report.txt
+product.data.file=product{0}.csv
+reviews.data.file=reviews{0}.csv
+temp.file={0}.tmp
