Bulk-Load Data from Files
Practice 13-2, Part 1

--- a/src/labs/pm/data/config.properties
+++ b/src/labs/pm/data/config.properties
@@ -13,7 +13,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 product.data.format={0},{1},{2},{3},{4},{5}
-review.data.format={0},{1},{2}
+review.data.format={0},{1}
 
 reports.folder=C:\\Users\\<user-so>\\labs\\reports
 data.folder=C:\\Users\\<user-so>\\labs\\data
