Implement Memory Swap Mechanism
Practice 13-3

--- a/src/labs/pm/data/config.properties
+++ b/src/labs/pm/data/config.properties
@@ -17,7 +17,7 @@ review.data.format={0},{1}
 
 reports.folder=C:\\Users\\<user-so>\\labs\\reports
 data.folder=C:\\Users\\<user-so>\\labs\\data
-temp.folder=C:\Users\<user-so>\\labs\\temp
+temp.folder=C:\\Users\<user-so>\\labs\\temp
 
 report.file=product{0}report.txt
 product.data.file=product{0}.csv
