Redesign ProductManager as a Singleton. Practice 14-1

--- a/src/labs/pm/data/config.properties
+++ b/src/labs/pm/data/config.properties
@@ -15,9 +15,9 @@
 product.data.format={0},{1},{2},{3},{4},{5}
 review.data.format={0},{1}
 
-reports.folder=C:\\Users\\<user-so>\\labs\\reports
-data.folder=C:\\Users\\<user-so>\\labs\\data
-temp.folder=C:\\Users\<user-so>\\labs\\temp
+reports.folder=/Users/<user>/Documents/dev/java/java-se-developer-ocp/learning-path/course-for-experienced-developers/lessons/labs/reports
+data.folder=/Users/<user>/Documents/dev/java/java-se-developer-ocp/learning-path/course-for-experienced-developers/lessons/labs/data
+temp.folder=/Users/<user>/Documents/dev/java/java-se-developer-ocp/learning-path/course-for-experienced-developers/lessons/labs/temp
 
 report.file=product{0}report.txt
 product.data.file=product{0}.csv
