Ensure ProductManager Memory Safety. Practice 14-2

--- a/src/labs/pm/data/config.properties
+++ b/src/labs/pm/data/config.properties
@@ -19,7 +19,7 @@ reports.folder=/Users/<user>/Documents/dev/java/java-se-developer-ocp/learning-p
 data.folder=/Users/<user>/Documents/dev/java/java-se-developer-ocp/learning-path/course-for-experienced-developers/lessons/labs/data
 temp.folder=/Users/<user>/Documents/dev/java/java-se-developer-ocp/learning-path/course-for-experienced-developers/lessons/labs/temp
 
-report.file=product{0}report.txt
+report.file=product{0}report{1}.txt
 product.data.file=product{0}.csv
 reviews.data.file=reviews{0}.csv
 temp.file={0}.tmp
